# abiword

./: .clang-format  .cvsignore  .gitignore  AUTHORS  AbiPL.html  AbiWord.exe.MANIFEST  BUILD  BUILD-LIB.TXT  BUILD-automake-1.5.TXT  BUILD.TXT  BUILD_GLIB.sh  BUILD_GXML.sh  BiDiReadme.txt  COPYRIGHT.TXT  CREDITS.TXT  Doxyfile  GET_GLIB.sh  GNUmakefile.am  Makefile  Makefile.am  README  README-gettextport.txt  README.TXT  TODO  TODO.TXT  TODO.merge  TRADEMARK.TXT  UnixFonts.txt  UnixLocales.txt  VERSION.TXT  abi2po.pl  abiword.1  abiword.appdata.xml  abiword.desktop  abiword.pc.in  abiword.prj  abiword.pws  autogen-common.sh  autogen-win32.sh  autogen.sh  (+33 more)
icons/: Makefile.am
plugins/: Makefile.am  abi-builtin-plugins.h
plugins/aiksaurus/: Makefile.am  plugin.m4
plugins/aiksaurus/aiksaurusgtk3/: AiksaurusGTK-C.cpp  AiksaurusGTK-C.h  AiksaurusGTK.cpp  AiksaurusGTK.h  AiksaurusGTK_histlist.cpp  AiksaurusGTK_histlist.h  AiksaurusGTK_history.cpp  AiksaurusGTK_history.h  AiksaurusGTK_picbutton.cpp  AiksaurusGTK_picbutton.h  AiksaurusGTK_strlist.cpp  AiksaurusGTK_strlist.h  AiksaurusGTK_utils.cpp  AiksaurusGTK_utils.h  DialogMediator.h  Display.cpp  Display.h  Exception.cpp  Exception.h  Makefile.am  Meaning.cpp  Meaning.h  Replacebar.cpp  Replacebar.h  Toolbar.cpp  Toolbar.h
plugins/aiksaurus/po/: Makefile  POTFILES.in  eo.po  es_ES.po
plugins/aiksaurus/win/: Aiksaurus.h  Aiksaurus.lib  AiksaurusApp.cpp  AiksaurusApp.h  AiksaurusDlg.cpp  AiksaurusDlg.h  Makefile.am  sources.base  sources.list
plugins/aiksaurus/xp/: AiksaurusABI.cpp  Makefile.am  sources.base  sources.list
plugins/applix/: Makefile.am  plugin.m4
plugins/applix/po/: Makefile  POTFILES.in  eo.po
plugins/applix/xp/: Makefile.am  ie_exp_Applix.cpp  ie_exp_Applix.h  ie_imp_Applix.cpp  ie_imp_Applix.h  ie_impexp_Applix.cpp  ie_impexp_Applix.h  sources.base  sources.list
plugins/babelfish/: Makefile.am  plugin.m4
plugins/babelfish/po/: Makefile  POTFILES.in  eo.po
plugins/babelfish/xp/: AbiBabelfish.cpp  Makefile.am  sources.base  sources.list
plugins/bmp/: Makefile.am  plugin.m4
plugins/bmp/po/: Makefile  POTFILES.in  eo.po
plugins/bmp/xp/: Makefile.am  ie_impGraphic_BMP.cpp  ie_impGraphic_BMP.h  sources.base  sources.list
plugins/clarisworks/: Makefile.am  plugin.m4
plugins/clarisworks/po/: Makefile  POTFILES.in  eo.po
plugins/clarisworks/xp/: Makefile.am  ie_imp_ClarisWorks.cpp  (+3 more)
plugins/collab/: Makefile.am  ax_boost_thread.m4  plugin.m4
plugins/command/: Makefile.am  plugin.m4
plugins/dash/: Makefile.am  plugin.m4
plugins/docbook/: Makefile.am  plugin.m4
plugins/eml/: Makefile.am  plugin.m4
plugins/epub/: Makefile.am  plugin.m4
plugins/freetranslation/: Makefile.am  plugin.m4
plugins/garble/: Makefile.am  plugin.m4
plugins/gda/: Makefile.am  plugin.m4
plugins/gdict/: Makefile.am  plugin.m4
plugins/gimp/: Makefile.am  plugin.m4
plugins/goffice/: Makefile.am  plugin.m4
plugins/google/: Makefile.am  plugin.m4
plugins/grammar/: Makefile.am  plugin.m4
plugins/hancom/: Makefile.am  plugin.m4
plugins/hrtext/: Makefile.am  plugin.m4
plugins/iscii/: Makefile.am  plugin.m4
plugins/jpeg/: Makefile.am  plugin.m4
plugins/jpeggfx/: Makefile.am  plugin.m4
plugins/kword/: Makefile.am  plugin.m4
plugins/latex/: Makefile.am  plugin.m4
plugins/loadbindings/: Makefile.am  plugin.m4
plugins/mathview/: Makefile.am  plugin.m4
plugins/mht/: Makefile.am  plugin.m4
plugins/mif/: Makefile.am  plugin.m4
plugins/mswrite/: Makefile.am  plugin.m4
plugins/nroff/: Makefile.am  plugin.m4
plugins/olpctoolbar/: Makefile.am  plugin.m4
plugins/opendocument/: Makefile.am  plugin.m4
plugins/openwriter/: Makefile.am  plugin.m4
plugins/openxml/: Makefile.am  plugin.m4
plugins/opml/: Makefile.am  plugin.m4
plugins/ots/: Makefile.am  plugin.m4
plugins/paint/: Makefile.am  plugin.m4
plugins/passepartout/: Makefile.am  plugin.m4
plugins/pdb/: Makefile.am  plugin.m4
plugins/pdf/: Makefile.am  plugin.m4
plugins/presentation/: Makefile.am  plugin.m4
plugins/psion/: Makefile.am  plugin.m4
plugins/rsvg/: Makefile.am  plugin.m4
plugins/s5/: Makefile.am  plugin.m4
plugins/sdw/: Makefile.am  plugin.m4
plugins/t602/: Makefile.am  plugin.m4
plugins/testharness/: Makefile.am  README  plugin.m4
plugins/urldict/: Makefile.am  plugin.m4
plugins/wikipedia/: Makefile.am  plugin.m4
plugins/win32gfx/: Makefile.am  plugin.m4
plugins/wmf/: Makefile.am  plugin.m4
plugins/wmfgfx/: Makefile.am  plugin.m4
plugins/wml/: Makefile.am  plugin.m4
plugins/wordperfect/: Makefile.am  plugin.m4
plugins/wpg/: Makefile.am  plugin.m4
plugins/wpggfx/: Makefile.am  plugin.m4
plugins/xslfo/: Makefile.am  plugin.m4
po/: .cvsignore  Makefile.am  Makefile.in  Makefile.in.in  POTFILES.in  README.TXT  abi-backport-all.sh  abi-do-all.sh  abi-extract.pl  abi-port-all.sh  abi-update-all.sh  abiword.POT  abiword.pot  ach.po  af-ZA.po  ak.po  am-ET.po  ar.po  art-lojban.po  ast-ES.po  ayc-BO.po  ayc_BO.po  aym-BO.po  be-BY.po  be@latin.po  bg-BG.po  bm.po  bn.po  br-FR.po  bs.po  ca-ES.po  ca@valencia.po  cgg.po  cs-CZ.po  cs_CZ.po  cy-CY.po  cy-GB.po  cy_GB.po  da-DK.po  de-CH.po  (+110 more)
src/: .cvsignore  .doxygen.cfg  GNUmakefile.am  Makefile  Makefile.am  README.TXT
src/af/: GNUmakefile.am  Makefile  Makefile.am  README.TXT
src/ask/: Makefile
src/bindings/: .cvsignore  GNUmakefile.am
src/config/: .cvsignore  GNUmakefile.am  Makefile  abi_config.h  abi_defs.mk  abi_defs.mk.mpw  abi_defs_hello.mk  abi_defs_show.mk  abi_defs_wp.mk  abi_release_version.mk  abi_rules.mk  abi_rules.mk.mpw  predefines.mk
src/gi-overrides/: Abi.py  Makefile.am
src/glade/: break.glade  lists.glade
src/hello/: Makefile
src/other/: GNUmakefile.am  Makefile  Makefile.am  README.TXT
src/pkg/: GNUmakefile.am
src/plugins/: GNUmakefile.am  Makefile.am  abi-builtin-plugins.cpp  abi-builtin-plugins.h
src/text/: .doxyfile  GNUmakefile.am  Makefile  Makefile.am  README.TXT  README.dox
src/tools/: .cvsignore  GNUmakefile.am  Makefile
src/wp/: GNUmakefile.am  Makefile  Makefile.am  README.TXT
(+6946 files in other folders)
